--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                     <div class="bignav__selection">
                         <ul class="bignav__selection--list">
                            <li>
-                            <a href="/html/index.html">Home</a>
+                            <a href="./index.html">Home</a>
                            </li>
                            <li>
-                            <a href="/html/about.html">About</a>
+                            <a href="./about.html">About</a>
                            </li>
                            <li>
-                            <a href="/html/news.html">News</a>
+                            <a href="./news.html">News</a>
                            </li>
                            <li>
-                            <a href="/html/food.html">Food</a>
+                            <a href="./food.html">Food</a>
                            </li>
                            <li>
-                            <a href="/html/contact.html">Contact</a>
+                            <a href="./contact.html">Contact</a>
                            </li>
                     </div>
                     <div class="bignav__search">
