--- a/news.html
+++ b/news.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imperial city</title>
     <link rel="icon" href="https://png.pngtree.com/png-clipart/20190617/original/pngtree-hand-drawn-style-little-girl-attractions-punch-travel-punch-png-image_3857565.jpg"  type="image/x-icon" />
-    <link rel="stylesheet" href="/assets/css/responsive/responsive.css">
-    <link rel="stylesheet" href="/assets/css/style/style.css">
-    <link rel="stylesheet" href="/assets/css/style/style_news.css">
+    <link rel="stylesheet" href="./assets/css/responsive/responsive.css">
+    <link rel="stylesheet" href="./assets/css/style/style.css">
+    <link rel="stylesheet" href="./assets/css/style/style_news.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
@@ -45,19 +45,19 @@
                     <div class="bignav__selection">
                         <ul class="bignav__selection--list">
                            <li>
-                            <a href="/html/index.html">Home</a>
+                            <a href="./index.html">Home</a>
                            </li>
                            <li>
-                            <a href="/html/about.html">About</a>
+                            <a href="./about.html">About</a>
                            </li>
                            <li>
-                            <a href="/html/news.html">News</a>
+                            <a href="./news.html">News</a>
                            </li>
                            <li>
-                            <a href="/html/food.html">Food</a>
+                            <a href="./food.html">Food</a>
                            </li>
                            <li>
-                            <a href="/html/contact.html">Contact</a>
+                            <a href="./contact.html">Contact</a>
                            </li>
                     </div>
                     <div class="bignav__search">
@@ -139,4 +139,4 @@
     </div>
 </body>
 </body>
-</html>
+<.>
